<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GithubSearch</string>
    <string name="search_repositories">Search Repositories</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_updated_at">Last updated at:</string>
    <string name="programming_language">Programming Language:</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="stars">Stars</string>
    <string name="forks">Forks</string>
    <string name="updated">Updated</string>
    <string name="select_sort">Select Sort</string>
    <string name="search">Search</string>

    <!--UserItem data-->
    <string name="username">Username:</string>
    <string name="company">Company:</string>
    <string name="blog">Blog:</string>
    <string name="location">Location:</string>
    <string name="email">Email:</string>
    <string name="hireable">Hireable:</string>
    <string name="bio">Bio:</string>
    <string name="public_repos">Public Repos:</string>
    <string name="public_gists">Public Gists:</string>
    <string name="followers">Followers:</string>
    <string name="following">Following:</string>
    <string name="created_at">Created At:</string>
    <string name="updated_at">Updated At:</string>
    <string name="avatar_url">Avatar URL:</string>
    <string name="events_url">Events URL:</string>
    <string name="followers_url">Followers URL:</string>
    <string name="following_url">Following URL:</string>
    <string name="gists_url">Gists URL:</string>
    <string name="gravatar_id">Gravatar URL:</string>
    <string name="html_url">Html URL:</string>
    <string name="id">Id:</string>
    <string name="node_id">Node ID:</string>
    <string name="organizations_url">Organizations URL:</string>
    <string name="repos_url">Repos URL:</string>
    <string name="starred_url">Starred URL:</string>


    <string name="try_later">Please try again in a few minutes!</string>
    <string name="login">Login</string>
    <string name="request_login">Request Login</string>
    <string name="clear_token">Clear token</string>
    <string name="get_user_data">Get private user data</string>
    <string name="empty_search">¯\\_(ツ)_/¯ \n Please enter something in the search bar!</string>
    <string name="delete_saved_token">Delete Saved Token</string>
    <string name="token_status">Token status: %1$s</string>
    <string name="token_success">Token fetched successfully</string>
    <string name="token_fail">An error occurred while fetching the token</string>
    <string name="token_delete">Token deleted successfully</string>
    <string name="available">available</string>
    <string name="token_not_available">please click request login to fetch the access token</string>

</resources>